# pico-system-monitor

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/pico-sys-monitor-lib/: sys_monitor.hpp
src/: CMakeLists.txt  sys_monitor.cpp
